tests/ui/parser/self-in-function-arg.rs
fn foo(x:i32, self: i32) -> i32 { self } //~ ERROR unexpected `self` parameter in function

fn main() {}
